Fixing the word-wrap in the dialog
Fixes issue blackberry/BB10-WebWorks-Framework#215

Reviewed By: Eric Pearson <epearson@rim.com>
tested By: Eric Pearson <epearson@rim.com>

--- a/ui-resources/plugins/dialog/styles/chrome.css
+++ b/ui-resources/plugins/dialog/styles/chrome.css
@@ -40,6 +40,7 @@
     -webkit-box-orient: vertical;
     -webkit-box-pack: justify;
     -webkit-box-align: stretch;
+    word-wrap: break-word;
 }
 
 .dialog-header {
